fix: align body to the center of the page

--- a/finance-budget-app/css/style.css
+++ b/finance-budget-app/css/style.css
@@ -8,6 +8,7 @@ body {
   line-height: 1.6;
   background-color: #000;
   color: #fff;
+  text-align: center;
 
   max-width: 60rem;
 }
@@ -15,10 +16,6 @@ body {
 .heading {
   font-weight: 700;
 }
-
-/* .budget__info {
-  font-size: 2rem;
-} */
 
 input {
   padding: 0.5rem;
